# SimpleGVI

./: .editorconfig  .gitignore  LICENSE  README.md  app.py  batch_process.py  main.py  pyproject.toml  requirements.txt  test_comprehensive.py
config/: settings.py
examples/: README.md
modules/: __init__.py  batch_processor.py  gvi_calculator.py  legend_config.py  visualization.py
styles/: __init__.py  apple_animations.py  apple_components.py  apple_design_tokens.py
